--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -2,7 +2,7 @@ name: Refresh
 on:
   # performed every two hours
   schedule:
-    - cron: "0 8-18/2 * * *"
+    - cron: "0 0-10/2 * * 1-5"
   workflow_dispatch:
 
 concurrency:
